Misc fixes to dice roll process. Add scrollbar to character sheet.

--- a/less/base.less
+++ b/less/base.less
@@ -16,6 +16,7 @@
 
 .sul__wrapper {
     padding: 10px;
+    overflow-y: scroll;
 }
 
 .sul__row {
