--- a/less/stunts.less
+++ b/less/stunts.less
@@ -18,7 +18,8 @@
     font-family:'Times New Roman', Times, serif;
     font-weight: bold;
     font-size: 1.3em;
-    width: 150px;
+    //width: 150px;
+    width: 20%;
     margin-right: 10px;
 }
 
@@ -29,4 +30,9 @@
 
 .sul__stunt-icons {
     margin-left: auto;
+    //width: 80px;
+    width: 7%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
 }
